# hermes-agent

./: .gitattributes  .gitignore  Dockerfile  README.md  codex_login.py  merge_config.py  railway.toml  requirements.txt  server.py  start.sh
Documents/Dev/: MFiles_CLI_Handover_for_Claude_Code.md
deploy/hetzner/: README.md  docker-compose.yml
graph-ingester/: ingest.py  lint_report.py  query.py  requirements.txt  reset.py
graph-mcp/: server.py
hermes-config/: MEMORY.md  SOUL.md  USER.md  config.seed.yaml
hermes-skills/estatemate-crm/: SKILL.md
hermes-skills/mfiles/: SKILL.md
hermes-skills/wedding-invoice/: SKILL.md
mfiles-cli/: README.md  pyproject.toml
mfiles-cli/mfiles_cli/: client.py  config.py  extract.py  formatters.py  main.py  rent_check.py  xlsx.py
mfiles-cli/tests/: test_amount_parsing.py  test_grep_context.py  test_redaction.py  test_rent_check.py  test_xlsx_output.py
mfiles-mcp/: calculations.py  mfiles_client.py  models.py  server.py
mfiles-skill/: SKILL.md
mission-control/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  railway.toml
mission-control/app/: globals.css  layout.tsx  page.tsx
mission-control/components/: ActivityFeed.tsx  DetailPanel.tsx  Graph.tsx  (+3 more)
ms365-mcp/: probe.py  server.py
patches/: hermes_traceback_patch.py  openai_responses_none_guard.py
scripts/: google_api_sa.py  ms365_login.py  ms365_probe_admin.py  ms365_probe_group.py  ms365_probe_mailbox.py  ms365_resolve.py  ms365_verify_instandhaltung.py  upload_google_api_sa.py  upload_sa_to_volume.py
(+20 files in other folders)
